--- a/joonatancss.css
+++ b/joonatancss.css
@@ -1,9 +1,9 @@
 :root { 
-    --bg: #0f172a;
+    --bg: #000000;
     --card-bg: #0b1120;
     --accent: #38bdf8;
-    --text-main: #e5e7eb;
-    --text-muted: #9ca3af;
+    --text-main: #32CD32;
+    --text-muted: #7DF9FF;
 
 }
 
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    background: radial-gardient(circle at top, #1e293b, 020617);
+    background: radial-gradient(circle at top, #1e293b, #020617);
     color: var(--text-main);
 
 }
@@ -40,7 +40,7 @@ body {
     margin-bottom: 30px;
 }
 
-.Sissejuhatus,
+
 .content{
     max-width: 800px;
     margin: 20px auto;
@@ -51,16 +51,9 @@ body {
     border: 1px solid rgba(148, 163, 184, 0.35);
 }
 
-.Sissejuhatus p:first-child{
-    font-size: 18px;
-    font-weight: 699;
 
-}
 
-.sissejuhatus p{
-    margin: 0 0 16px;
-    line-height: 1.6;
-}
+
 
 .content h2 {
     margin-top: 0;
@@ -71,8 +64,8 @@ body {
 }
 
 .content p {
-    margin: 0 0 10px;
-    line-height: 1,7;
+    margin: 0 0 16px;
+    line-height: 1.6;
     color: var(--text-main);
 }
 
