--- a/stiil1.css
+++ b/stiil1.css
@@ -1,40 +1,38 @@
 
+.Main{
+    background-image: url("5939.jpg_wh860.jpg");
+}
 
 .header{
-
-    font-size: x-large;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(46, 92, 137);
+    font-size: 40px;
     font-style: oblique;
-    color: black;
     text-align: left;
 }
 .subheader{
-    
-    font-size: medium;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(46, 92, 137);
+    font-size: 28px;
     font-style: oblique;
     text-align: left;
 }
 
 .Sissejuhatus{
-    font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
-    font-display: block;
+    background-color: rgb(46, 92, 137);
+    font-size: 28px;
+    font-style: block;
     text-align: center;
 }
 
 .Päritolu{
+    background-color: rgb(46, 92, 137);
     font-family: Arial;
-    font-display: fallback;
     display: grid;
     grid-template-columns: 55% 45%;
+    text-align: left;
+    gap: 30 px;
 }
 .Päritolutekst{
-    font-size: large;
-    color: black;
-    font-family:Arial, Helvetica, sans-serif;
-    font-display: fallback;
+    font-size: 22px;
     text-align: justify;
     line-height: 1.7;
     grid-column: 1;
@@ -44,93 +42,141 @@
     grid-column: 2;
     width: 90% ;
     height: auto;
-    align-items: center;
+    align-items: start;
+}
+.Päritolupealkiri{
+    font-style: oblique;
+    font-size: 30px;
 }
 .Peale_lõpetamist{
-    color: black;
-    font-size: large;
+    background-color: rgb(46, 92, 137);
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
-    text-align: justify;
     line-height: 1.7;
-    display: grid;
-    grid-template-columns: 45% 55%;
-    align-items:last baseline;
+    padding: 20px;
 }
-
 .Peale_lõpetamisttekst{
-    grid-column: 2;
+    text-align: justify;
+    margin-bottom: 20px;
+
 }
+
 .Peale_lõpetamistpealkiri{
-    color: black;
-    font-size: large;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    font-display:block;
     font-style: oblique;
-    text-align: justify;
+    text-align: left;
     line-height: 1.7;
-    display: grid;
-    grid-template-columns: 45% 55%;
-    grid-column: 2;
+    margin-bottom: 15 px;    
+}
+.Peale_lõpetamistpildid{
+    background-color: rgb(46, 92, 137);
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+.Peale_lõpetamistpilt1{
+    width: 90% ;
+    height: auto;
+    text-align: center;
+}
+.Peale_lõpetamistpilt2{
+    width: 75% ;
+    height: auto;
+    text-align: center;
 
 }
-
+.Peale_lõpetamistpilt3{
+    width: 90% ;
+    height: auto;
+    text-align: center;
+}
+.Peale_lõpetamistpildid img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
 .Hobid{
-    color: black;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
-    font-display:block;
-    text-align: justify;
-    line-height: 1.7;
+    background-color: rgb(46, 92, 137);
     display: grid;
-    grid-template-columns: 55% 45%;
-    align-items:last baseline;
+    grid-template-columns: 60% 40%;
+    gap: 30px;
+    align-items: start;
+    padding: 20px 0;
 }
 .Hobidtekst{
-    grid-column: 1;
-}
-.Hobidpealkiri{
-     color: black;
-    font-size: large;
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
-    font-style: oblique;
     text-align: justify;
     line-height: 1.7;
-    display: grid;
-    grid-template-columns: 45% 55%;
     grid-column: 1;
+    
+}
+.Hobidpilt{
+    grid-column: 2;
+    width: 100% ;
+    height: auto;
+    justify-self: center;
+    align-self: start;
+}
+
+.Hobidpealkiri{
+    font-style: oblique;
+    text-align: left;
+    grid-column: 1 / 2;
+    margin-bottom: 15px;
+    font-size: 30px;
 }
 
 .Varia{
-    color: black;
-    font-size: large;
+    background-color: rgb(46, 92, 137);
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
     text-align: justify;
     line-height: 1.7;
-    display: grid;
-    grid-template-columns: 60% 40%;
-    align-items:last baseline;
 }
 .Variatekst{
-    grid-column: 2;
+    text-align: left;
 }
 .Variapealkiri{
-    color: black;
-    font-size: large;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
     font-style: oblique;
-    text-align: justify;
+    text-align: left;
     line-height: 1.7;
     display: grid;
-    grid-template-columns: 60% 40%;
-    grid-column: 2;    
+    grid-column: 1;    
 }
+.Variapildid{
+    background-color: rgb(46, 92, 137);
+    gap: 20px;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items:last baseline;
+
+}
+.Variapilt1{
+    grid-column: 1;
+    width: 90% ;
+    height: auto;
+    text-align: center;
+}
+.Variapilt2{
+    grid-column: 2;
+    width: 90% ;
+    height: auto;
+    text-align: center;
+}
+
 .Tulevik{
-    color: black;
-    font-size: large;
+    background-color: rgb(46, 92, 137);
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
     text-align: justify;
@@ -142,16 +188,13 @@
     grid-column: 1;
 }    
 .Tulevikupealkiri{
-    color: black;
-    font-size: large;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-display:block;
     font-style: oblique;
-    text-align: justify;
+    text-align: left;
     line-height: 1.7;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column: 1;    
+    grid-column: 1 / 3;  
 }
 .Tulevikupilt{
     grid-column: 2;
@@ -159,4 +202,31 @@
     height: auto;
     justify-self: right;
     padding: 10 px;
+}
+.Instagram{
+    background-color: rgb(46, 92, 137);
+    display: grid;
+   grid-template-columns: 25% 50% 25%;
+   grid-template-rows: 2; 
+   margin-bottom: 20px;
+}
+.Instagramtekst{
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-display:block;
+    text-align: center;
+    grid-column: 2;
+    grid-row: 1;
+    margin-bottom: 10px;
+}
+.Instagrampilt{
+    grid-column: 2;
+    grid-row: 2;
+    width: 50px;
+    height: auto;
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
