--- a/stiil1.css
+++ b/stiil1.css
@@ -1,3 +1,7 @@
+/*https://www.w3schools.com/cssref/css3_pr_align-items.php*/
+/*https://www.w3schools.com/css/css_border.asp*/
+/*https://www.w3schools.com/css/css_background.asp*/
+/*https://www.w3schools.com/css/css_grid.asp*/
 
 .Main{
     background-image: url("5939.jpg_wh860.jpg");
